<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.annchar.coinranking.ui.cryptolist.CryptoListViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/AppToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="0dp"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:menu="@menu/top_app_bar"
                    app:title="@string/app_name" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_100"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/spot_feature"
                    android:textAppearance="@style/TextAppearance.CoinRankingStyles.Subtitle2" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_white"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_column"
                        android:textAppearance="@style/TextAppearance.CoinRankingStyles.Caption"
                        app:layout_constraintEnd_toStartOf="@+id/tv_vol"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_vol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vol_column"
                        android:textAppearance="@style/TextAppearance.CoinRankingStyles.Caption"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"
                        app:layout_constraintStart_toEndOf="@+id/tv_name"
                        app:layout_constraintTop_toTopOf="@+id/tv_name" />

                    <TextView
                        android:id="@+id/tv_last_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/last_price_column"
                        android:textAppearance="@style/TextAppearance.CoinRankingStyles.Caption"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toEndOf="@+id/guideline1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_percent_change"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/percent_change_column"
                        android:textAppearance="@style/TextAppearance.CoinRankingStyles.Caption"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.4" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.75" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_crypto_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        app:layoutManager="LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_crypto" />

                    <TextView
                        android:id="@+id/tv_no_results"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/no_results"
                        android:textAppearance="@style/TextAppearance.CoinRankingStyles.Subtitle2"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_retry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retry"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                style="@style/AppFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fab_content_desc"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_arrow_upward_white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
